--- a/index.html
+++ b/index.html
@@ -4,209 +4,135 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>De Slimste Kameraad</title>
+    <script defer>
+        document.addEventListener("DOMContentLoaded", () => {
+            let timers = [60, 60, 60, 60];
+            let teamNamen = ["Team 1", "Team 2", "Team 3", "Team 4"];
+            let intervals = [null, null, null, null];
+            let geselecteerdeTimer = 0;
+            let zichtbareTimers = [true, true, true, true];
 
-    <!-- Firebase SDK (modular) -->
-    <script type="module">
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
-        import { getDatabase, ref, set, onValue } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js";
+            function updateWeergave() {
+                timers.forEach((tijd, index) => {
+                    document.getElementById(`timer${index}`).textContent = tijd;
+                    let teamNaamEl = document.getElementById(`team-name-${index}`);
 
-        // Firebase configuratie
-        const firebaseConfig = {
-            apiKey: "AIzaSyDZT3EHgtrDfDxevE4xy2a-xIS3X7Cegho",
-            authDomain: "de-slimste-kameraad-timer-ppt.firebaseapp.com",
-            databaseURL: "https://de-slimste-kameraad-timer-ppt-default-rtdb.europe-west1.firebasedatabase.app",
-            projectId: "de-slimste-kameraad-timer-ppt",
-            storageBucket: "de-slimste-kameraad-timer-ppt.firebasestorage.app",
-            messagingSenderId: "63484640762",
-            appId: "1:63484640762:web:6541546d615df83c5b7843"
-        };
+                    // Controleer of de teamnaam een invoerveld is en vervang het met een div na bewerking
+                    if (teamNaamEl.tagName.toLowerCase() === "input") {
+                        let nieuwNaamDiv = document.createElement("div");
+                        nieuwNaamDiv.id = `team-name-${index}`;
+                        nieuwNaamDiv.classList.add("team-name");
+                        nieuwNaamDiv.textContent = teamNamen[index];
+                        nieuwNaamDiv.addEventListener("click", () => maakTeamnaamBewerkbaar(index)); // Voeg de event listener opnieuw toe
+                        teamNaamEl.replaceWith(nieuwNaamDiv);
+                    } else {
+                        teamNaamEl.textContent = teamNamen[index];
+                        teamNaamEl.addEventListener("click", () => maakTeamnaamBewerkbaar(index)); // Voeg de event listener toe als deze nog niet bestaat
+                    }
 
-        // Initialiseer Firebase
-        const app = initializeApp(firebaseConfig);
-        const db = getDatabase(app);
-        const timersRef = ref(db, 'timers');
-        const teamNamesRef = ref(db, 'teamNames');
-        const selectedTimerRef = ref(db, 'selectedTimer');
-
-        let timers = [60, 60, 60, 60];
-        let teamNamen = ["Team 1", "Team 2", "Team 3", "Team 4"];
-        let intervals = [null, null, null, null];
-        let geselecteerdeTimer = 0;
-        let zichtbareTimers = [true, true, true, true];
-
-        // Update de timerweergave
-        function updateWeergave() {
-            timers.forEach((tijd, index) => {
-                document.getElementById(`timer${index}`).textContent = tijd;
-                let teamNaamEl = document.getElementById(`team-name-${index}`);
-                teamNaamEl.textContent = teamNamen[index];
-
-                document.getElementById(`timer-container-${index}`).style.display = zichtbareTimers[index] ? "block" : "none";
-            });
-
-            // Zet de rand van de geselecteerde timer
-            document.querySelectorAll(".timer").forEach((el, index) => {
-                if (index === geselecteerdeTimer) {
-                    el.classList.add("selected");
-                } else {
-                    el.classList.remove("selected");
-                }
-            });
-        }
-
-        // Synchroniseer de timer naar Firebase
-        function syncTimer() {
-            set(timersRef, timers);  // Zet de timerstatus in Firebase
-        }
-
-        // Synchroniseer teamnamen naar Firebase
-        function syncTeamNames() {
-            set(teamNamesRef, teamNamen);  // Zet de teamnamen in Firebase
-        }
-
-        // Synchroniseer de geselecteerde timer naar Firebase
-        function syncSelectedTimer() {
-            set(selectedTimerRef, geselecteerdeTimer);  // Zet de geselecteerde timer in Firebase
-        }
-
-        // Start de timer en synchroniseer met Firebase
-        function startTimer() {
-            if (intervals[geselecteerdeTimer]) return;
-            intervals[geselecteerdeTimer] = setInterval(() => {
-                if (timers[geselecteerdeTimer] > 0) {
-                    timers[geselecteerdeTimer]--;
-                    updateWeergave();
-                    syncTimer(); // Synchroniseer elke seconde
-                } else {
-                    stopTimer(); // Stop de timer als deze op 0 komt
-                }
-            }, 1000);
-
-            syncSelectedTimer(); // Synchroniseer de geselecteerde timer
-        }
-
-        // Stop de timer en synchroniseer met Firebase
-        function stopTimer() {
-            clearInterval(intervals[geselecteerdeTimer]);
-            intervals[geselecteerdeTimer] = null;
-            syncTimer();  // Synchroniseer de gestopte timer
-        }
-
-        // Reset de timer en synchroniseer met Firebase
-        function resetTimer() {
-            timers = [60, 60, 60, 60];
-            updateWeergave();
-            syncTimer();
-        }
-
-        // Pas de tijd aan en synchroniseer met Firebase
-        function pasTijdAan(aantal) {
-            timers[geselecteerdeTimer] = Math.max(0, timers[geselecteerdeTimer] + aantal);
-            updateWeergave();
-            syncTimer();
-        }
-
-        // Maak teamnaam bewerkbaar
-        function maakTeamnaamBewerkbaar(index) {
-            let teamNaamEl = document.getElementById(`team-name-${index}`);
-            let inputVeld = document.createElement("input");
-            inputVeld.type = "text";
-            inputVeld.value = teamNamen[index];
-            inputVeld.classList.add("team-input");
-
-            // Vervang de huidige naam door het invoerveld
-            teamNaamEl.replaceWith(inputVeld);
-            inputVeld.focus();
-
-            inputVeld.addEventListener("blur", () => slaNieuweTeamnaamOp(index, inputVeld.value));
-            inputVeld.addEventListener("keydown", (event) => {
-                if (event.key === "Enter") {
-                    slaNieuweTeamnaamOp(index, inputVeld.value);
-                }
-            });
-        }
-
-        // Sla de nieuwe teamnaam op in Firebase
-        function slaNieuweTeamnaamOp(index, nieuweNaam) {
-            if (nieuweNaam.trim() !== "") {
-                teamNamen[index] = nieuweNaam;
+                    document.getElementById(`timer-container-${index}`).style.display = zichtbareTimers[index] ? "block" : "none";
+                });
             }
-            updateWeergave();
-            syncTeamNames();
-        }
 
-        // Synchroniseren van veranderingen uit Firebase
-        function syncWithFirebase() {
-            onValue(timersRef, (snapshot) => {
-                const data = snapshot.val();
-                if (data) {
-                    timers = data;
-                    updateWeergave();
-                }
-            });
+            function selecteerTimer(index) {
+                document.querySelectorAll(".timer").forEach(el => el.classList.remove("selected"));
+                geselecteerdeTimer = index;
+                document.getElementById(`timer-container-${index}`).classList.add("selected");
+                document.getElementById("timerSelect").value = index;
+            }
 
-            onValue(teamNamesRef, (snapshot) => {
-                const data = snapshot.val();
-                if (data) {
-                    teamNamen = data;
-                    updateWeergave();
-                }
-            });
+            function startTimer() {
+                if (intervals[geselecteerdeTimer]) return;
+                intervals[geselecteerdeTimer] = setInterval(() => {
+                    if (timers[geselecteerdeTimer] > 0) {
+                        timers[geselecteerdeTimer]--;
+                        updateWeergave();
+                    }
+                }, 1000);
+            }
 
-            onValue(selectedTimerRef, (snapshot) => {
-                const data = snapshot.val();
-                if (data !== undefined) {
-                    geselecteerdeTimer = data;
-                    updateWeergave();
-                }
-            });
-        }
+            function stopTimer() {
+                clearInterval(intervals[geselecteerdeTimer]);
+                intervals[geselecteerdeTimer] = null;
+            }
 
-        // Event listeners voor de knoppen
-        document.querySelectorAll(".timer").forEach((el, index) => {
-            el.addEventListener("click", () => selecteerTimer(index));
-        });
-
-        document.getElementById("startBtn").addEventListener("click", startTimer);
-        document.getElementById("stopBtn").addEventListener("click", stopTimer);
-        document.getElementById("resetBtn").addEventListener("click", resetTimer);
-        document.getElementById("toggleBtn").addEventListener("click", toggleTimerZichtbaarheid);
-
-        document.querySelectorAll(".adjust-time").forEach(button => {
-            button.addEventListener("click", () => pasTijdAan(parseInt(button.dataset.amount)));
-        });
-
-        syncWithFirebase(); // Start de synchronisatie
-
-        // Selecteer een timer
-        function selecteerTimer(index) {
-            document.querySelectorAll(".timer").forEach(el => el.classList.remove("selected"));
-            geselecteerdeTimer = index;
-            document.getElementById(`timer-container-${index}`).classList.add("selected");
-            document.getElementById("timerSelect").value = index;
-            syncSelectedTimer();  // Synchroniseer de geselecteerde timer
-        }
-
-        function toggleTimerZichtbaarheid() {
-            zichtbareTimers[geselecteerdeTimer] = !zichtbareTimers[geselecteerdeTimer];
-            updateWeergave();
-        }
-
-        function stelAangepasteTijdIn() {
-            const invoerSeconden = parseInt(document.getElementById("timeInput").value);
-            if (!isNaN(invoerSeconden) && invoerSeconden >= 0) {
-                timers[geselecteerdeTimer] = invoerSeconden;
+            function resetTimer() {
+                timers = [60, 60, 60, 60];
                 updateWeergave();
-                syncTimer();
-            } else {
-                alert("Voer een geldig aantal seconden in (minimaal 0)");
             }
-        }
 
-        selecteerTimer(0);
-        updateWeergave();
+            function pasTijdAan(aantal) {
+                timers[geselecteerdeTimer] = Math.max(0, timers[geselecteerdeTimer] + aantal);
+                updateWeergave();
+            }
+
+            function toggleTimerZichtbaarheid() {
+                zichtbareTimers[geselecteerdeTimer] = !zichtbareTimers[geselecteerdeTimer];
+                updateWeergave();
+            }
+
+            function stelAangepasteTijdIn() {
+                const invoerSeconden = parseInt(document.getElementById("timeInput").value);
+                if (!isNaN(invoerSeconden) && invoerSeconden >= 0) {
+                    timers[geselecteerdeTimer] = invoerSeconden;
+                    updateWeergave();
+                } else {
+                    alert("Voer een geldig aantal seconden in (minimaal 0)");
+                }
+            }
+
+            function maakTeamnaamBewerkbaar(index) {
+                let naamLabel = document.getElementById(`team-name-${index}`);
+                let inputVeld = document.createElement("input");
+                inputVeld.type = "text";
+                inputVeld.value = teamNamen[index];
+                inputVeld.classList.add("team-input");
+
+                // Vervang de huidige naam door het invoerveld
+                naamLabel.replaceWith(inputVeld);
+                inputVeld.focus();
+
+                // Wanneer het invoerveld verliest focus, sla de nieuwe naam op
+                inputVeld.addEventListener("blur", () => slaNieuweTeamnaamOp(index, inputVeld.value));
+                
+                // Wanneer je op enter drukt, sla de nieuwe naam op
+                inputVeld.addEventListener("keydown", (event) => {
+                    if (event.key === "Enter") {
+                        slaNieuweTeamnaamOp(index, inputVeld.value);
+                    }
+                });
+            }
+
+            function slaNieuweTeamnaamOp(index, nieuweNaam) {
+                if (nieuweNaam.trim() !== "") {
+                    teamNamen[index] = nieuweNaam;
+                }
+                updateWeergave();
+            }
+
+            // Event listeners voor timer en knoppen
+            document.querySelectorAll(".timer").forEach((el, index) => {
+                el.addEventListener("click", () => selecteerTimer(index));
+            });
+
+            document.getElementById("timerSelect").addEventListener("change", (event) => {
+                selecteerTimer(parseInt(event.target.value));
+            });
+
+            document.getElementById("startBtn").addEventListener("click", startTimer);
+            document.getElementById("stopBtn").addEventListener("click", stopTimer);
+            document.getElementById("resetBtn").addEventListener("click", resetTimer);
+            document.getElementById("toggleBtn").addEventListener("click", toggleTimerZichtbaarheid);
+            document.getElementById("setTimeBtn").addEventListener("click", stelAangepasteTijdIn);
+
+            document.querySelectorAll(".adjust-time").forEach(button => {
+                button.addEventListener("click", () => pasTijdAan(parseInt(button.dataset.amount)));
+            });
+
+            selecteerTimer(0);
+            updateWeergave();
+        });
     </script>
-
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -221,17 +147,18 @@
             justify-content: center;
             gap: 20px;
             margin-bottom: 20px;
-            flex-wrap: wrap; /* Dit zorgt ervoor dat de timers zich netjes schalen op verschillende schermgroottes */
+            flex-wrap: nowrap; /* Zorg ervoor dat de timers naast elkaar blijven */
+            overflow-x: auto; /* Zorg ervoor dat je kunt scrollen als er niet genoeg ruimte is */
         }
         .timer {
-            width: 250px;
-            height: 250px;
+            width: 230px;  /* Kleinere breedte voor mobiele weergave */
+            height: 230px;  /* Kleinere hoogte voor mobiele weergave */
             border: 6px solid white;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            font-size: 100px;
+            font-size: 70px; /* Kleinere tekstgrootte voor mobiele weergave */
             font-weight: bold;
             color: red;
             background-color: white;
@@ -257,7 +184,7 @@
             flex-direction: column;
             align-items: center;
             gap: 10px;
-            margin-top: 40px;
+            margin-top: 60px;
         }
         .row {
             display: flex;
@@ -272,8 +199,8 @@
             padding: 10px;
             font-size: 14px;
             border-radius: 5px;
-            width: auto;
-            max-width: 120px;
+            width: auto; /* Laat de knoppen kleiner worden, maar passen goed in de layout */
+            max-width: 120px; /* Beperk de breedte van de knoppen */
         }
         .selected {
             border: 6px solid red;
@@ -282,29 +209,21 @@
         /* Media query voor kleinere schermen (mobiel) */
         @media (max-width: 768px) {
             .timer-container {
-                flex-direction: column; /* Stapel timers verticaal op kleinere schermen */
+                flex-direction: row; /* Zorg ervoor dat de timers naast elkaar blijven op kleinere schermen */
             }
             .timer {
-                width: 90%;
-                height: 200px;
-                font-size: 50px;
+                width: 230px;  /* Kleinere breedte voor mobiele weergave */
+                height: 230px;  /* Kleinere hoogte voor mobiele weergave */
+                font-size: 50px; /* Kleinere tekstgrootte voor mobiele weergave */
             }
             .team-name {
-                font-size: 18px;
+                font-size: 18px; /* Kleinere teamnaam voor mobiele weergave */
             }
             .controls {
-                width: 90%;
+                width: 90%;  /* Maak de knoppen smaller voor mobiele weergave */
             }
             button {
                 font-size: 12px; /* Kleinere tekst voor knoppen op mobiel */
-            }
-        }
-
-        /* Zorg ervoor dat de timers naast elkaar staan op grotere schermen */
-        @media (min-width: 769px) {
-            .timer-container {
-                flex-direction: row; /* Zorg ervoor dat timers naast elkaar staan */
-                justify-content: space-between;
             }
         }
     </style>
@@ -313,23 +232,24 @@
     <h1>De Slimste Kameraad</h1>
     <div class="timer-container">
         <div class="timer" id="timer-container-0">
-            <div id="team-name-0" class="team-name" onclick="maakTeamnaamBewerkbaar(0)">Team 1</div>
+            <div id="team-name-0" class="team-name">Team 1</div>
             <div id="timer0">60</div>
         </div>
         <div class="timer" id="timer-container-1">
-            <div id="team-name-1" class="team-name" onclick="maakTeamnaamBewerkbaar(1)">Team 2</div>
+            <div id="team-name-1" class="team-name">Team 2</div>
             <div id="timer1">60</div>
         </div>
         <div class="timer" id="timer-container-2">
-            <div id="team-name-2" class="team-name" onclick="maakTeamnaamBewerkbaar(2)">Team 3</div>
+            <div id="team-name-2" class="team-name">Team 3</div>
             <div id="timer2">60</div>
         </div>
         <div class="timer" id="timer-container-3">
-            <div id="team-name-3" class="team-name" onclick="maakTeamnaamBewerkbaar(3)">Team 4</div>
+            <div id="team-name-3" class="team-name">Team 4</div>
             <div id="timer3">60</div>
         </div>
     </div>
 
+    <!-- Control Buttons -->
     <div class="controls">
         <div class="row">
             <button id="startBtn">Start</button>
