--- a/index.html
+++ b/index.html
@@ -16,18 +16,23 @@
                 timers.forEach((tijd, index) => {
                     document.getElementById(`timer${index}`).textContent = tijd;
                     let teamNaamEl = document.getElementById(`team-name-${index}`);
-
-                    // Controleer of de teamnaam een invoerveld is en vervang het met een div na bewerking
-                    if (teamNaamEl.tagName.toLowerCase() === "input") {
-                        let nieuwNaamDiv = document.createElement("div");
-                        nieuwNaamDiv.id = `team-name-${index}`;
-                        nieuwNaamDiv.classList.add("team-name");
-                        nieuwNaamDiv.textContent = teamNamen[index];
-                        nieuwNaamDiv.addEventListener("click", () => maakTeamnaamBewerkbaar(index)); // Voeg de event listener opnieuw toe
-                        teamNaamEl.replaceWith(nieuwNaamDiv);
+                    
+                    // Controleer of het teamnaam element bestaat
+                    if (teamNaamEl) {
+                        // Controleer of de teamnaam een invoerveld is en vervang het met een div na bewerking
+                        if (teamNaamEl.tagName.toLowerCase() === "input") {
+                            let nieuwNaamDiv = document.createElement("div");
+                            nieuwNaamDiv.id = `team-name-${index}`;
+                            nieuwNaamDiv.classList.add("team-name");
+                            nieuwNaamDiv.textContent = teamNamen[index];
+                            nieuwNaamDiv.addEventListener("click", () => maakTeamnaamBewerkbaar(index)); // Voeg de event listener opnieuw toe
+                            teamNaamEl.replaceWith(nieuwNaamDiv);
+                        } else {
+                            teamNaamEl.textContent = teamNamen[index];
+                            teamNaamEl.addEventListener("click", () => maakTeamnaamBewerkbaar(index)); // Voeg de event listener toe als deze nog niet bestaat
+                        }
                     } else {
-                        teamNaamEl.textContent = teamNamen[index];
-                        teamNaamEl.addEventListener("click", () => maakTeamnaamBewerkbaar(index)); // Voeg de event listener toe als deze nog niet bestaat
+                        console.error(`Element met id "team-name-${index}" niet gevonden`);
                     }
 
                     document.getElementById(`timer-container-${index}`).style.display = zichtbareTimers[index] ? "block" : "none";
