--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             margin-bottom: 20px;
         }
         .team-input {
-            font-size: 24px;
+            font-size: 40px;  /* Teamnaam blijft op dezelfde grootte */
             font-weight: bold;
             width: 80%;
             text-align: center;
