--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
                     const teamNaamEl = document.getElementById(`team-name-${index}`);
 
-                    // Controleer of het teamnaam element bestaat
+                    // Controleer of het teamnaam element bestaat voordat je verder gaat
                     if (teamNaamEl) {
                         // Als de teamnaam een input veld is, vervang het met een div
                         if (teamNaamEl.tagName.toLowerCase() === "input") {
