--- a/index.html
+++ b/index.html
@@ -113,6 +113,11 @@
                             slaNieuweTeamnaamOp(index, inputVeld.value);
                         }
                     });
+                } else {
+                    // Geen actie nodig als het element al vervangen is
+                    console.warn(`Element met id "team-name-${index}" is al vervangen, geen actie nodig.`);
+                }
+            }
 
             function slaNieuweTeamnaamOp(index, nieuweNaam) {
                 if (nieuweNaam.trim() !== "") {
@@ -176,7 +181,7 @@
             border-radius: 20px;
         }
         .team-name {
-            font-size: 30px;
+            font-size: 40px;
             font-weight: bold;
             color: black;
             cursor: pointer;
