--- a/index.html
+++ b/index.html
@@ -166,14 +166,14 @@
             overflow-x: auto; /* Zorg ervoor dat je kunt scrollen als er niet genoeg ruimte is */
         }
         .timer {
-            width: 230px;  /* Kleinere breedte voor mobiele weergave */
-            height: 230px;  /* Kleinere hoogte voor mobiele weergave */
+            width: 300px;  /* Vergrote breedte voor timers */
+            height: 300px;  /* Vergrote hoogte voor timers */
             border: 6px solid white;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            font-size: 70px; /* Kleinere tekstgrootte voor mobiele weergave */
+            font-size: 70px; /* Vergrote tekstgrootte voor timers */
             font-weight: bold;
             color: red;
             background-color: white;
